# Insynergy-Cinematic-Thought-Leadership-Platform

./: .gitignore  1. Vision_Architecture.md  2.Story Engine.md  3.Screenplay Engine.md  4.Short Planner_Story Board..md  5.Rendering Platform & Runway Integration.md  6.Performance Architecture.md  7.Quality Gates.md  8.GitHub Actions.md  9.Acceptance Criteria.md  README.md  pyproject.toml
config/: default.json
examples/: decision-boundary.md
schemas/: agent-review-report.schema.json  argument-map.schema.json  blocking.schema.json  build-profile.schema.json  character-bible.schema.json  conflict.schema.json  continuity.schema.json  data-flow.schema.json  dramatic-premise.schema.json  layer-contract.schema.json  logline.schema.json  metadata.schema.json  performance-budget.schema.json  persona-approval-binding.schema.json  persona-proposals.schema.json  persona-red-team-report.schema.json  previsualization-plan.schema.json  product-contract.schema.json  provider-capability.schema.json  quality-gate-registry.schema.json  render-manifest.schema.json  render-strategy.schema.json  render-task.schema.json  retry-policy.schema.json  review-approval-binding.schema.json  schema-registry.json  screenplay-config.schema.json  screenplay.schema.json  shot-gate-report.schema.json  shot-metrics.schema.json  story-arc.schema.json  storyboard-preview-approval-binding.schema.json  storyboard-preview-manifest.schema.json  storyboard-preview-quality-report.schema.json  theme.schema.json  time-pressure.schema.json  video-prompt-set.schema.json
tests/: persona_fixture.py  test_api.py  (+21 more)
(+122 files in other folders)
